# powershell-socket

./: pyproject.toml
powershell_socket/: main.py  websocket powershell.ps1
