[tool.poetry]
name = "powershell-websocket"
version = "0.1.0"
description = ""
authors = ["Robson Carvalho <robsonn@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
